# vuz_resurs

./: .gitignore  DEPLOYMENT.md  PROJECT_INFO.md  README.md  RELEASE_NOTES.md  app.js  data.json  index.html  pyproject.toml  styles.css  модель данных.md
data/: index.json
data/universities/bmstu/: courses.json  educationalEvents.json  infoEvents.json  olympiads.json  onlineResources.json  practicalEvents.json  summary.md  summerPrograms.json
data/universities/cu/: courses.json  educationalEvents.json  infoEvents.json  olympiads.json  onlineResources.json  practicalEvents.json  schools.json  summerPrograms.json
data/universities/fa/: courses.json  educationalEvents.json  olympiads.json  onlineResources.json  summerPrograms.json
data/universities/guu/: README.md  courses.json  educationalEvents.json  infoEvents.json  olympiads.json  onlineResources.json  practicalEvents.json  schools.json  summerPrograms.json
data/universities/hse/: comprehensive_guide.md  courses.json  educationalEvents.json  infoEvents.json  olympiads.json  onlineResources.json  practicalEvents.json  schools.json  summerPrograms.json
data/universities/mai/: MAI-Resources-Analysis.md  courses.json  educationalEvents.json  infoEvents.json  olympiads.json  onlineResources.json  practicalEvents.json  schools.json  summerPrograms.json
data/universities/mgimo/: MGIMO_Analysis_Summary.md  Reference_Guide.md  courses.json  educationalEvents.json  infoEvents.json  olympiads.json  onlineResources.json  practicalEvents.json  schools.json  summerPrograms.json
data/universities/mipt/: courses.json  educationalEvents.json  infoEvents.json  olympiads.json  onlineResources.json  practicalEvents.json  schools.json  summerPrograms.json
data/universities/mpei/: courses.json  educationalEvents.json  infoEvents.json  olympiads.json  onlineResources.json  practicalEvents.json  schools.json  summerPrograms.json
data/universities/msu/: courses.json  educationalEvents.json  infoEvents.json  olympiads.json  onlineResources.json  practicalEvents.json  schools.json  summerPrograms.json
data/universities/nes/: Summary.md  courses.json  infoEvents.json  olympiads.json  onlineResources.json  summerPrograms.json
data/universities/ranepa/: courses.json  educationalEvents.json  infoEvents.json  olympiads.json  onlineResources.json  practicalEvents.json  schools.json  summerPrograms.json
data/universities/rea/: courses.json  educationalEvents.json  infoEvents.json  olympiads.json  onlineResources.json  practicalEvents.json  schools.json  summerPrograms.json
data/universities/rudn/: courses.json  educationalEvents.json  infoEvents.json  olympiads.json  onlineResources.json  practicalEvents.json  schools.json  summerPrograms.json
data/universities/skolkovo/: README.md  courses.json  educationalEvents.json  index.json  infoEvents.json  olympiads.json  onlineResources.json  practicalEvents.json  schools.json  summerPrograms.json
data/universities/vavt/: courses.json  educationalEvents.json  infoEvents.json  olympiads.json  (+4 more)
docs/: mcp_validation.html  structure.html  валидация_ресурсов.md  модель_данных.md  промпт_для_поиска.md
js/: app.js  config.js  data-loader.js  event-handlers.js  filters.js  modal.js  resource-cards.js  state.js  ui-renderer.js
mcp/: .gitignore  mcp_server.py  mcp_validator.md  requirements.txt
mcp/utils/: json_handler.py  report_generator.py  validator.py  web_scraper.py
презентация и документы проекта/: VUZresurs.pptx  Стефан Огульник - Паспорт проекта 9 класс 25_26(3).xlsx  Форма проект (Ответы).xlsx
