# pyproject.toml

[project]
name = "vuz_resurs"
version = "1.2"
description = "Простой и эффективный веб-сайт для подбора ресурсов для поступления в ВУЗ"
requires-python = ">=3.10"

[tool.black]
line-length = 120
target-version = ["py314"]

[tool.ruff]
target-version = "py314"

# Исключаем файлы и директории
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "node_modules",
    ".pytest_cache",
    ".mypy_cache",
    "migrations",
    "*.egg-info",
]

# Длина строки (синхронизировано с Black)
line-length = 120

# Автоматические исправления
fix = true

[tool.ruff.lint]
# Расширенный набор правил для качественного кода (совместимо с Pylint)
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # bandit (security)
    "T20", # flake8-todos
    "RUF", # ruff-specific
    "PTH", # pathlib
    "PL",  # pylint-like rules в Ruff (для частичной совместимости)
]

ignore = [
    "E501",    # line too long (дублирует Pylint C0301)
    "E261",    # inline comment spacing
    "B008",    # function calls in defaults
    "S101",    # assert
    "T201",    # print
    "S603",    # subprocess
    "S607",    # partial path
    "N806",    # lowercase variables
    "RUF012",  # mutable class attrs
    "RUF001",
    "RUF002",
    "RUF003",  # unicode
    "E712",    # None comparison
    "B904",    # raise SystemExit
    "E722",    # bare except
    "S113",    # requests timeout
    "I001",    # sort import  # Отключение сортировки импортов (Ruff не проверяет порядок)
    "PLR09",   # Too many branches
    "PLR2004", # Magic value used in comparison
]

# Дополнительно для совместимости с Pylint
[tool.ruff.lint.pylint]
max-branches = 15
max-statements = 50
max-args = 10
max-locals = 15
max-returns = 6

[tool.pylint]
ignore-patterns = [
    "venv",
    "__pycache__",
    "*.egg-info",
    ".pytest-cache",
    "migrations",
]

[tool.pylint."messages_control"]
disable = [
    # Базовые игноры
    "C0111", # missing-docstring
    "C0103", # invalid-name
    "R0903", # too-few-public-methods
    "W0212", # protected-access
    "W0718", # broad-exception-caught

    # Дубли с Ruff
    "C0301", # line-too-long (E501 в Ruff)
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "W0511", # fixme/todo (T20 в Ruff)
    "W0611", # unused-import (F401 в Ruff)
    "W0612", # unused-variable (F841 в Ruff)
    "W0613", # unused-argument (F841 в Ruff)
    "R1710", # inconsistent-return-statements (F841 в Ruff)
    "E1101", # instance-of-undefined (F821 в Ruff)

    # Для FastAPI/Telegram проекта
    "R0801", # duplicate-code (слишком строгий для boilerplate)
]

# enable = [
#     # Строгие Pylint-правила для архитектуры
#     "bad-builtin",
#     "superfluous-parens",
#     "unsubscriptable-object",
#     "consider-using-with",
# ]

[tool.pylint.format]
max-line-length = 120

[tool.pylint."design"]
max-args = 10
max-locals = 15
max-branches = 15
max-statements = 50
max-returns = 6

[tool.pylint."basic"]
argument-rgx = "^[a-z_][a-z0-9_]{1,30}$"
variable-rgx = "^[a-z_][a-z0-9_]{1,30}$"
class-rgx = "^[A-Z_][a-zA-Z0-9_]{2,30}$"
function-rgx = "^[a-z_][a-z0-9_]{2,30}$"

# Устанавливаем зависимости, если нужно (pip install pylint ruff)
# В .venv: pip install "ruff[cli]" pylint
